// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> renders close button 1`] = `
<div
  className="f1wiy088"
>
  <Row
    after={
      <withStyles(IconButton)
        onClick={[Function]}
      >
        <IconClose
          accessibilityLabel="Close"
          color="currentColor"
          flip={false}
          flipVertical={false}
          inline={false}
          size={24}
        />
      </withStyles(IconButton)>
    }
    before={null}
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      Title
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders inline 1`] = `
<div
  className="fn214z0"
>
  <Row
    before={null}
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      Title
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders danger alert 1`] = `
<div
  className="fiwda3u"
>
  <Row
    before={
      <IconError
        color="#DF2323"
        decorative={true}
        flip={false}
        flipVertical={false}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      danger
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders info alert 1`] = `
<div
  className="ft01794"
>
  <Row
    before={
      <IconInfo
        color="#6f44ff"
        decorative={true}
        flip={false}
        flipVertical={false}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      info
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders muted alert 1`] = `
<div
  className="f1wiy088"
>
  <Row
    before={null}
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      muted
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders notice alert 1`] = `
<div
  className="fo6sd6j"
>
  <Row
    before={
      <IconFlag
        color="#1561B2"
        decorative={true}
        flip={false}
        flipVertical={false}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      notice
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders success alert 1`] = `
<div
  className="f1g4rlhu"
>
  <Row
    before={
      <IconCheckAlt
        color="#4AA83E"
        decorative={true}
        flip={false}
        flipVertical={false}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      success
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders warning alert 1`] = `
<div
  className="f1h9buxq"
>
  <Row
    before={
      <IconWarning
        color="#FFB400"
        decorative={true}
        flip={false}
        flipVertical={false}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      warning
    </Text>
  </Row>
</div>
`;
